--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: Release action
 on:
   workflow_dispatch:
-    inputss:
+    inputs:
       bump-level:
         type: choice
         options: [patch, minor, major]
